--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                         </a>
                     </div>
                     <a class="btn btn-outline mt-10" href="/images/Resume - Md  Arfanul Haque.pdf"
-                        download="Your_Name_Resume.pdf">
+                        download="Resume - Md  Arfanul Haque.pdf">
                         <button>Download Resume</button>
                     </a>
                     <a class="btn btn-outline mt-10" href="/images/CV - Md  Arfanul Haque .pdf"
-                        download="Your_Name_Resume.pdf">
+                        download="CV - Md  Arfanul Haque .pdf">
                         <button>Download CV</button>
                     </a>
                 </div>
