--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
                             <img class="" src="images/linkend.png" alt="LinkedIn">
                         </a>
                     </div>
-                    <a class="btn btn-outline mt-10" href="/images/Resume - Md  Arfanul Haque.pdf"
-                        download="Resume - Md  Arfanul Haque.pdf">
+                    <a class="btn btn-outline mt-10"
+                        href="https://drive.usercontent.google.com/u/1/uc?id=1incxFof84CYKLSE0xmXaFR4dir8Cq1lA&export=download"
+                        download="https://drive.usercontent.google.com/u/1/uc?id=1incxFof84CYKLSE0xmXaFR4dir8Cq1lA&export=download">
                         <button>Download Resume</button>
                     </a>
-                    <a class="btn btn-outline mt-10" href="/images/CV - Md  Arfanul Haque .pdf"
-                        download="CV - Md  Arfanul Haque .pdf">
+                    <a class="btn btn-outline mt-10"
+                        href="https://drive.usercontent.google.com/u/0/uc?id=1oU9XAfy9VXFrmMV8KnbXhbSTM10hb-Na&export=download"
+                        download="https://drive.usercontent.google.com/u/0/uc?id=1oU9XAfy9VXFrmMV8KnbXhbSTM10hb-Na&export=download">
                         <button>Download CV</button>
                     </a>
                 </div>
